examples/alphazero/.ipynb_checkpoints/az_simbudget-checkpoint.err
Loading module 'cuda/12.2.0'
Loading module 'gcc/9.2.0'

Loading [1mcuda/12.2.0[22m
  [94mLoading requirement[0m: gcc/9.2.0
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'torch'
ERROR:2025-11-27 19:06:39,067:jax._src.xla_bridge:477: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 201, in _version_check
    version = get_version()
              ^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:81: operation cusparseGetProperty(MAJOR_VERSION, &major) failed: The cuSPARSE library was not found.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax/_src/xla_bridge.py", line 475, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 266, in _check_cuda_versions
    _version_check("cuSPARSE", cuda_versions.cusparse_get_version,
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 205, in _version_check
    raise RuntimeError(err_msg) from e
RuntimeError: Unable to load cuSPARSE. Is it installed?
WARNING:2025-11-27 19:06:39,075:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
/scratch/fbd2014/speedchess/examples/alphazero/train.py:39: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
  class Config(BaseModel):
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/scratch/fbd2014/speedchess/examples/alphazero/train.py", line 66, in <module>
    config: Config = Config(**conf_dict)
                     ^^^^^^^^^^^^^^^^^^^
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/pydantic/main.py", line 250, in __init__
    validated_self = self.__pydantic_validator__.validate_python(data, self_instance=self)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pydantic_core._pydantic_core.ValidationError: 2 validation errors for Config
wandb
  Extra inputs are not permitted [type=extra_forbidden, input_value={'group': 'sim_2'}, input_type=DictConfig]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
+save_suffix
  Extra inputs are not permitted [type=extra_forbidden, input_value='_sim2', input_type=str]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
ERROR:2025-11-27 19:06:41,601:jax._src.xla_bridge:477: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 201, in _version_check
    version = get_version()
              ^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:81: operation cusparseGetProperty(MAJOR_VERSION, &major) failed: The cuSPARSE library was not found.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax/_src/xla_bridge.py", line 475, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 266, in _check_cuda_versions
    _version_check("cuSPARSE", cuda_versions.cusparse_get_version,
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 205, in _version_check
    raise RuntimeError(err_msg) from e
RuntimeError: Unable to load cuSPARSE. Is it installed?
WARNING:2025-11-27 19:06:41,607:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
/scratch/fbd2014/speedchess/examples/alphazero/train.py:39: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
  class Config(BaseModel):
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/scratch/fbd2014/speedchess/examples/alphazero/train.py", line 66, in <module>
    config: Config = Config(**conf_dict)
                     ^^^^^^^^^^^^^^^^^^^
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/pydantic/main.py", line 250, in __init__
    validated_self = self.__pydantic_validator__.validate_python(data, self_instance=self)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pydantic_core._pydantic_core.ValidationError: 2 validation errors for Config
wandb
  Extra inputs are not permitted [type=extra_forbidden, input_value={'group': 'sim_4'}, input_type=DictConfig]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
+save_suffix
  Extra inputs are not permitted [type=extra_forbidden, input_value='_sim4', input_type=str]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
ERROR:2025-11-27 19:06:43,688:jax._src.xla_bridge:477: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 201, in _version_check
    version = get_version()
              ^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:81: operation cusparseGetProperty(MAJOR_VERSION, &major) failed: The cuSPARSE library was not found.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax/_src/xla_bridge.py", line 475, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 266, in _check_cuda_versions
    _version_check("cuSPARSE", cuda_versions.cusparse_get_version,
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 205, in _version_check
    raise RuntimeError(err_msg) from e
RuntimeError: Unable to load cuSPARSE. Is it installed?
WARNING:2025-11-27 19:06:43,695:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
/scratch/fbd2014/speedchess/examples/alphazero/train.py:39: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
  class Config(BaseModel):
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/scratch/fbd2014/speedchess/examples/alphazero/train.py", line 66, in <module>
    config: Config = Config(**conf_dict)
                     ^^^^^^^^^^^^^^^^^^^
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/pydantic/main.py", line 250, in __init__
    validated_self = self.__pydantic_validator__.validate_python(data, self_instance=self)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pydantic_core._pydantic_core.ValidationError: 2 validation errors for Config
wandb
  Extra inputs are not permitted [type=extra_forbidden, input_value={'group': 'sim_8'}, input_type=DictConfig]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
+save_suffix
  Extra inputs are not permitted [type=extra_forbidden, input_value='_sim8', input_type=str]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
ERROR:2025-11-27 19:06:45,764:jax._src.xla_bridge:477: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 201, in _version_check
    version = get_version()
              ^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:81: operation cusparseGetProperty(MAJOR_VERSION, &major) failed: The cuSPARSE library was not found.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax/_src/xla_bridge.py", line 475, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 266, in _check_cuda_versions
    _version_check("cuSPARSE", cuda_versions.cusparse_get_version,
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 205, in _version_check
    raise RuntimeError(err_msg) from e
RuntimeError: Unable to load cuSPARSE. Is it installed?
WARNING:2025-11-27 19:06:45,771:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
/scratch/fbd2014/speedchess/examples/alphazero/train.py:39: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
  class Config(BaseModel):
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/scratch/fbd2014/speedchess/examples/alphazero/train.py", line 66, in <module>
    config: Config = Config(**conf_dict)
                     ^^^^^^^^^^^^^^^^^^^
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/pydantic/main.py", line 250, in __init__
    validated_self = self.__pydantic_validator__.validate_python(data, self_instance=self)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pydantic_core._pydantic_core.ValidationError: 2 validation errors for Config
wandb
  Extra inputs are not permitted [type=extra_forbidden, input_value={'group': 'sim_16'}, input_type=DictConfig]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
+save_suffix
  Extra inputs are not permitted [type=extra_forbidden, input_value='_sim16', input_type=str]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
ERROR:2025-11-27 19:06:47,821:jax._src.xla_bridge:477: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 201, in _version_check
    version = get_version()
              ^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:81: operation cusparseGetProperty(MAJOR_VERSION, &major) failed: The cuSPARSE library was not found.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax/_src/xla_bridge.py", line 475, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 266, in _check_cuda_versions
    _version_check("cuSPARSE", cuda_versions.cusparse_get_version,
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py", line 205, in _version_check
    raise RuntimeError(err_msg) from e
RuntimeError: Unable to load cuSPARSE. Is it installed?
WARNING:2025-11-27 19:06:47,827:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
/scratch/fbd2014/speedchess/examples/alphazero/train.py:39: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
  class Config(BaseModel):
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/scratch/fbd2014/speedchess/examples/alphazero/train.py", line 66, in <module>
    config: Config = Config(**conf_dict)
                     ^^^^^^^^^^^^^^^^^^^
  File "/home/fbd2014/.conda/envs/speedchess/lib/python3.11/site-packages/pydantic/main.py", line 250, in __init__
    validated_self = self.__pydantic_validator__.validate_python(data, self_instance=self)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pydantic_core._pydantic_core.ValidationError: 2 validation errors for Config
wandb
  Extra inputs are not permitted [type=extra_forbidden, input_value={'group': 'sim_32'}, input_type=DictConfig]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
+save_suffix
  Extra inputs are not permitted [type=extra_forbidden, input_value='_sim32', input_type=str]
    For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
